--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "node_crud_api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server.ts",
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start:prod": "node ./src/server.js",
-    "start:dev": "set NODE_ENV=development && nodemon ./src/server.js",
-    "start:multi": "node ./src/cluster.js"
+    "start:prod": "ts-node --esm ./src/server.ts",
+    "start:dev": "set NODE_ENV=development && nodemon --esm ./src/server.ts",
+    "start:multi": "ts-node --esm ./src/cluster.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/node": "^22.7.4",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
